# defects-detective

./: CMakeLists.txt  Dockerfile  PARTICIPANTS_GUIDE.md  README.md  drawer.py  run.sh
include/: Analyzer.h  BOFChecker.h  CChecker.h  Checker.h  DataDependenceGraph.h  FuncAnalyzer.h  FuncInfo.h  MLChecker.h  Sarif.h  SimplePass.h  UAFChecker.h
scripts/: build.sh  install_required_packages.sh
src/: Analyzer.cpp  BOFChecker.cpp  CChecker.cpp  CMakeLists.txt  Checker.cpp  DataDependenceGraph.cpp  FuncAnalyzer.cpp  FuncInfo.cpp  MLChecker.cpp  Sarif.cpp  SimplePass.cpp  UAFChecker.cpp
